# synerlogikos

./: Cargo.toml  README.md
src/: create.rs  find_matching.rs  get.rs  lib.rs  request.rs  sync.rs  update.rs
tests/: full_flow.rs
